# sympsense-2.0

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
apps/cli/src/sympsense/: __init__.py  (+12 more)
configs/: app.yaml  body_snapshot_quality_gates_v1.json  goldset_v1.json  quality_gates_v1.json  section_map_v1.json
docs/: 00_start_here.md  01_detailed_tz.md  02_architecture.md  03_agent_operating_playbook.md  04_best_practices_medical_agent.md  05_roadmap.md  06_data_contracts.md  07_quality_delivery_plan.md  08_local_api.md  ANALYST_PROMPT.md  GIT_BOOTSTRAP.md  NEW_CHAT_BOOTSTRAP.md  NEW_CHAT_PROMPT_TEMPLATE.md  TEMP_lab_duplicate_audit_for_claude_review.md  WORKING_STATE_2026-04-08.md  lab_classification_v1.md  lab_summary_ui_plan_v1.md  plan_status.md
schemas/: base_record.schema.json  doctor_conclusion_record.schema.json  document_record.schema.json  lab_record.schema.json  medication_record.schema.json  recommendation_record.schema.json  symptom_event_record.schema.json
scripts/facts/: build_body_snapshot_v1.py  build_fact_layer_v1.py  build_problem_list_v1.py
scripts/quality/: audit_lab_duplicates_v1.py  backfill_imaging_canonical_v1.py  backfill_labs_canonical_v1.py  dedupe_labs_by_docid_v1.py  process_round10_batch_v1.py  process_round9_batch_v1.py  remediate_doc_606_misclass_v1.py  remediate_doctor_consultations_v2.py  remediate_imaging_reports_v2.py  run_body_snapshot_quality_gates_v1.py  run_quality_gates_v1.py
scripts/reports/: build_documents_review_ui_v2.py  run_documents_review_ui_server.py
tests/: test_lab_duplicate_normalization.py
