[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sympsense"
version = "0.1.0"
description = "Agent-first personal medical memory system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
sympsense = "sympsense.cli:app"

[tool.setuptools]
package-dir = {"" = "apps/cli/src"}

[tool.setuptools.packages.find]
where = ["apps/cli/src"]
